# Aegis

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
aegis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/: orchestrator.py
agents/medic/: agent.py  prompts.py  risk_policy.py  tools.py
agents/memory/: schemas.py  vector_store.py
agents/scribe/: agent.py  prompts.py  tools.py
agents/sentry/: agent.py  prompts.py  tools.py
agents/sleuth/: agent.py  prompts.py  tools.py
backend/: config.py  dependencies.py  main.py
backend/api/: routes_agents.py  routes_incidents.py  routes_metrics.py
backend/db/: models.py  session.py
backend/grpc_server/: server.py  streaming.proto
docs/: agent_design.md
docs/postmortems/: 0d545406-6ae8-46bc-b7dd-dee0e41d9ef4.md  78abbc26-fe4e-4205-965e-585a5edaa8ee.md  b4bd0128-5e79-4dd6-9f4a-f7abb7e31562.md  c8c3554b-1605-48c0-8273-e68927e79389.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentTraceView.tsx  ApprovalModal.tsx  IncidentTimeline.tsx  MetricsPanel.tsx
frontend/src/hooks/: useAgentStream.ts
frontend/src/lib/: api.ts
infra/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  docker-compose.override.yml  docker-compose.yml
notebooks/: test_gemini.py
simulator/: cli.py  metrics_generator.py  mock_inference_service.py
simulator/failure_scenarios/: __init__.py  cascading_failure.py  data_drift.py  gpu_oom.py  latency_spike.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_medic_risk_policy.py  test_schemas.py  test_scribe.py  test_sentry.py  test_simulator.py  test_sleuth.py
