[project]
name = "aegis"
version = "0.1.0"
description = "A multi-agent system on top of an ML production stack"
authors = [{ name = "Debnil" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "chromadb>=0.4.24",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
]
