[project]
name = "aegis"
version = "0.2.0"
description = "Multi-agent ML operations system for autonomous incident detection, diagnosis, and remediation."
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.1.0",
    "google-genai>=0.3.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "grpcio>=1.64",
    "grpcio-tools>=1.64",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.setuptools]
packages = ["agents", "backend", "simulator"]

[tool.setuptools.package-data]
"*" = ["*.proto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.vercel]
entrypoint = "backend.main:app"

